--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,49 +1,30 @@
-# Gallery Images
-# Beheer hier de foto's voor je galerij
-
-# Note: To add new photos via Netlify CMS:
-# 1. Go to /admin
-# 2. Click on "Galerij" collection
-# 3. Fill in the empty photo fields (photo5, photo6, etc.)
-# 4. Upload the image and add caption/location
-
-photo1_image: "imgs/franse-kerk-concert.jpg"
-photo1_caption: "Optreden in de Franse Kerk"
-photo1_location: "Franse Kerk, Voorburg"
-
-photo2_image: "imgs/library-concert.jpg"
-photo2_caption: "Muzikaal verhaal in de bibliotheek"
-photo2_location: "Bibliotheek"
-
-photo3_image: "imgs/park-concert.jpg"
-photo3_caption: "Optreden in het park paviljoen"
-photo3_location: "Park"
-
-photo4_image: "imgs/floating-ponton-concert.jpg"
-photo4_caption: "Uniek optreden op het water"
-photo4_location: "Water"
-
-# Additional photo slots (leave empty to skip)
+photo1_image: imgs/franse-kerk-concert.jpg
+photo1_caption: Optreden in de prachtige Franse Kerk
+photo1_location: Franse Kerk, Voorburg
+photo2_image: imgs/library-concert.jpg
+photo2_caption: Muzikaal verhaal in de bibliotheek
+photo2_location: Bibliotheek
+photo3_image: imgs/park-concert.jpg
+photo3_caption: Optreden in het park paviljoen
+photo3_location: Park
+photo4_image: imgs/floating-ponton-concert.jpg
+photo4_caption: Uniek optreden op het water
+photo4_location: Water
 photo5_image: ""
 photo5_caption: ""
 photo5_location: ""
-
 photo6_image: ""
 photo6_caption: ""
 photo6_location: ""
-
 photo7_image: ""
 photo7_caption: ""
 photo7_location: ""
-
 photo8_image: ""
 photo8_caption: ""
 photo8_location: ""
-
 photo9_image: ""
 photo9_caption: ""
 photo9_location: ""
-
 photo10_image: ""
 photo10_caption: ""
 photo10_location: ""
