--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -10,9 +10,9 @@ photo3_location: Park
 photo4_image: imgs/floating-ponton-concert.jpg
 photo4_caption: Uniek optreden op het water
 photo4_location: Water
-photo5_image: /imgs/postcard.jpg
-photo5_caption: Een test
-photo5_location: voor de site
+photo5_image: ""
+photo5_caption: ""
+photo5_location: ""
 photo6_image: ""
 photo6_caption: ""
 photo6_location: ""
