Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,6 +1,6 @@
 homepage_title: SPEEL MEE BIJ HET H.I.J.!
-homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver, ver
-  daarbuiten! Samen muziek maken, nieuwe vrienden leren kennen en optreden op
+homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver daarbuiten!
+  Samen muziek maken, nieuwe vrienden leren kennen en optreden op de meest
   verrassende plekken.
 cta_text: Lid Worden
 about_title: Over Ons
