Update Foto “gallery”

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,15 +1,15 @@
 photo1_image: /imgs/franse-kerk-concert.jpg
-photo1_caption: Optreden in de prachtige Franse Kerk
+photo1_caption: Optreden in de Franse Kerk
 photo1_location: Franse Kerk, Voorburg
 photo2_image: imgs/library-concert.jpg
 photo2_caption: Muzikaal verhaal in de bibliotheek
 photo2_location: Bibliotheek
 photo3_image: imgs/park-concert.jpg
-photo3_caption: Optreden in het park paviljoen
-photo3_location: Park
+photo3_caption: Optreden in het paviljoen
+photo3_location: Park Arentsburgh
 photo4_image: imgs/floating-ponton-concert.jpg
 photo4_caption: Uniek optreden op het water
-photo4_location: Water
+photo4_location: Bieslandse Bos
 photo5_image: ""
 photo5_caption: ""
 photo5_location: ""
