--- a/admin/config.yml
+++ b/admin/config.yml
@@ -50,6 +50,7 @@ collections:
         label: "Agenda Events"
         name: "agenda"
         fields:
+          - {label: "Event 1 - Jaar", name: "event1_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 1 - Dag", name: "event1_day", widget: "string", required: false, hint: "Bijv.: 15"}
           - {label: "Event 1 - Maand", name: "event1_month", widget: "string", required: false, hint: "Bijv.: NOV"}
           - {label: "Event 1 - Titel", name: "event1_title", widget: "string", required: false}
@@ -57,6 +58,7 @@ collections:
           - {label: "Event 1 - Locatie", name: "event1_location", widget: "string", required: false}
           - {label: "Event 1 - Beschrijving", name: "event1_description", widget: "text", required: false}
           - {label: "Event 1 - Link", name: "event1_link", widget: "string", required: false, hint: "Link naar meer informatie (optioneel)"}
+          - {label: "Event 2 - Jaar", name: "event2_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 2 - Dag", name: "event2_day", widget: "string", required: false, hint: "Bijv.: 20"}
           - {label: "Event 2 - Maand", name: "event2_month", widget: "string", required: false, hint: "Bijv.: DEC"}
           - {label: "Event 2 - Titel", name: "event2_title", widget: "string", required: false}
@@ -64,6 +66,7 @@ collections:
           - {label: "Event 2 - Locatie", name: "event2_location", widget: "string", required: false}
           - {label: "Event 2 - Beschrijving", name: "event2_description", widget: "text", required: false}
           - {label: "Event 2 - Link", name: "event2_link", widget: "string", required: false, hint: "Link naar meer informatie (optioneel)"}
+          - {label: "Event 3 - Jaar", name: "event3_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 3 - Dag", name: "event3_day", widget: "string", required: false}
           - {label: "Event 3 - Maand", name: "event3_month", widget: "string", required: false}
           - {label: "Event 3 - Titel", name: "event3_title", widget: "string", required: false}
@@ -71,6 +74,7 @@ collections:
           - {label: "Event 3 - Locatie", name: "event3_location", widget: "string", required: false}
           - {label: "Event 3 - Beschrijving", name: "event3_description", widget: "text", required: false}
           - {label: "Event 3 - Link", name: "event3_link", widget: "string", required: false}
+          - {label: "Event 4 - Jaar", name: "event4_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 4 - Dag", name: "event4_day", widget: "string", required: false}
           - {label: "Event 4 - Maand", name: "event4_month", widget: "string", required: false}
           - {label: "Event 4 - Titel", name: "event4_title", widget: "string", required: false}
@@ -78,6 +82,7 @@ collections:
           - {label: "Event 4 - Locatie", name: "event4_location", widget: "string", required: false}
           - {label: "Event 4 - Beschrijving", name: "event4_description", widget: "text", required: false}
           - {label: "Event 4 - Link", name: "event4_link", widget: "string", required: false}
+          - {label: "Event 5 - Jaar", name: "event5_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 5 - Dag", name: "event5_day", widget: "string", required: false}
           - {label: "Event 5 - Maand", name: "event5_month", widget: "string", required: false}
           - {label: "Event 5 - Titel", name: "event5_title", widget: "string", required: false}
@@ -85,6 +90,7 @@ collections:
           - {label: "Event 5 - Locatie", name: "event5_location", widget: "string", required: false}
           - {label: "Event 5 - Beschrijving", name: "event5_description", widget: "text", required: false}
           - {label: "Event 5 - Link", name: "event5_link", widget: "string", required: false}
+          - {label: "Event 6 - Jaar", name: "event6_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 6 - Dag", name: "event6_day", widget: "string", required: false}
           - {label: "Event 6 - Maand", name: "event6_month", widget: "string", required: false}
           - {label: "Event 6 - Titel", name: "event6_title", widget: "string", required: false}
@@ -92,6 +98,7 @@ collections:
           - {label: "Event 6 - Locatie", name: "event6_location", widget: "string", required: false}
           - {label: "Event 6 - Beschrijving", name: "event6_description", widget: "text", required: false}
           - {label: "Event 6 - Link", name: "event6_link", widget: "string", required: false}
+          - {label: "Event 7 - Jaar", name: "event7_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 7 - Dag", name: "event7_day", widget: "string", required: false}
           - {label: "Event 7 - Maand", name: "event7_month", widget: "string", required: false}
           - {label: "Event 7 - Titel", name: "event7_title", widget: "string", required: false}
@@ -99,6 +106,7 @@ collections:
           - {label: "Event 7 - Locatie", name: "event7_location", widget: "string", required: false}
           - {label: "Event 7 - Beschrijving", name: "event7_description", widget: "text", required: false}
           - {label: "Event 7 - Link", name: "event7_link", widget: "string", required: false}
+          - {label: "Event 8 - Jaar", name: "event8_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 8 - Dag", name: "event8_day", widget: "string", required: false}
           - {label: "Event 8 - Maand", name: "event8_month", widget: "string", required: false}
           - {label: "Event 8 - Titel", name: "event8_title", widget: "string", required: false}
@@ -106,6 +114,7 @@ collections:
           - {label: "Event 8 - Locatie", name: "event8_location", widget: "string", required: false}
           - {label: "Event 8 - Beschrijving", name: "event8_description", widget: "text", required: false}
           - {label: "Event 8 - Link", name: "event8_link", widget: "string", required: false}
+          - {label: "Event 9 - Jaar", name: "event9_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 9 - Dag", name: "event9_day", widget: "string", required: false}
           - {label: "Event 9 - Maand", name: "event9_month", widget: "string", required: false}
           - {label: "Event 9 - Titel", name: "event9_title", widget: "string", required: false}
@@ -113,6 +122,7 @@ collections:
           - {label: "Event 9 - Locatie", name: "event9_location", widget: "string", required: false}
           - {label: "Event 9 - Beschrijving", name: "event9_description", widget: "text", required: false}
           - {label: "Event 9 - Link", name: "event9_link", widget: "string", required: false}
+          - {label: "Event 10 - Jaar", name: "event10_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 10 - Dag", name: "event10_day", widget: "string", required: false}
           - {label: "Event 10 - Maand", name: "event10_month", widget: "string", required: false}
           - {label: "Event 10 - Titel", name: "event10_title", widget: "string", required: false}
@@ -120,6 +130,7 @@ collections:
           - {label: "Event 10 - Locatie", name: "event10_location", widget: "string", required: false}
           - {label: "Event 10 - Beschrijving", name: "event10_description", widget: "text", required: false}
           - {label: "Event 10 - Link", name: "event10_link", widget: "string", required: false}
+          - {label: "Event 11 - Jaar", name: "event11_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 11 - Dag", name: "event11_day", widget: "string", required: false}
           - {label: "Event 11 - Maand", name: "event11_month", widget: "string", required: false}
           - {label: "Event 11 - Titel", name: "event11_title", widget: "string", required: false}
@@ -127,6 +138,7 @@ collections:
           - {label: "Event 11 - Locatie", name: "event11_location", widget: "string", required: false}
           - {label: "Event 11 - Beschrijving", name: "event11_description", widget: "text", required: false}
           - {label: "Event 11 - Link", name: "event11_link", widget: "string", required: false}
+          - {label: "Event 12 - Jaar", name: "event12_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 12 - Dag", name: "event12_day", widget: "string", required: false}
           - {label: "Event 12 - Maand", name: "event12_month", widget: "string", required: false}
           - {label: "Event 12 - Titel", name: "event12_title", widget: "string", required: false}
@@ -134,6 +146,7 @@ collections:
           - {label: "Event 12 - Locatie", name: "event12_location", widget: "string", required: false}
           - {label: "Event 12 - Beschrijving", name: "event12_description", widget: "text", required: false}
           - {label: "Event 12 - Link", name: "event12_link", widget: "string", required: false}
+          - {label: "Event 13 - Jaar", name: "event13_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 13 - Dag", name: "event13_day", widget: "string", required: false}
           - {label: "Event 13 - Maand", name: "event13_month", widget: "string", required: false}
           - {label: "Event 13 - Titel", name: "event13_title", widget: "string", required: false}
@@ -141,6 +154,7 @@ collections:
           - {label: "Event 13 - Locatie", name: "event13_location", widget: "string", required: false}
           - {label: "Event 13 - Beschrijving", name: "event13_description", widget: "text", required: false}
           - {label: "Event 13 - Link", name: "event13_link", widget: "string", required: false}
+          - {label: "Event 14 - Jaar", name: "event14_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 14 - Dag", name: "event14_day", widget: "string", required: false}
           - {label: "Event 14 - Maand", name: "event14_month", widget: "string", required: false}
           - {label: "Event 14 - Titel", name: "event14_title", widget: "string", required: false}
@@ -148,6 +162,7 @@ collections:
           - {label: "Event 14 - Locatie", name: "event14_location", widget: "string", required: false}
           - {label: "Event 14 - Beschrijving", name: "event14_description", widget: "text", required: false}
           - {label: "Event 14 - Link", name: "event14_link", widget: "string", required: false}
+          - {label: "Event 15 - Jaar", name: "event15_year", widget: "string", required: false, hint: "Bijv.: 2025"}
           - {label: "Event 15 - Dag", name: "event15_day", widget: "string", required: false}
           - {label: "Event 15 - Maand", name: "event15_month", widget: "string", required: false}
           - {label: "Event 15 - Titel", name: "event15_title", widget: "string", required: false}
