Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,6 +1,7 @@
 faq1_question: Moet ik al goed kunnen spelen?
-faq1_answer: Nee hoor! Als je een paar jaar speelervaring hebt en enthousiast
-  bent, ben je welkom. We leren allemaal van elkaar in een ontspannen sfeer.
+faq1_answer: Nee hoor, zeker niet! Als je een paar jaar speelervaring hebt en
+  enthousiast bent, ben je welkom. We leren allemaal van elkaar in een
+  ontspannen sfeer.
 faq2_question: Wat kost lidmaatschap?
 faq2_answer: De jaarlijkse contributie is €250. Dit dekt de kosten voor het
   gebruik van de oefenruimte, onze dirigent en bijvoorbeeld bladmuziek.
