Update Content “content”

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -2,7 +2,7 @@ homepage_title: SPEEL MEE BIJ HET H.I.J.!
 homepage_subtitle: Het gezelligste jeugdorkest van Voorburg en ver daarbuiten!
   Samen muziek maken, nieuwe vrienden leren kennen en optreden op verrassende
   plekken.
-cta_text: Lid Worden
+cta_text: Lid Worden dus
 about_title: Over Ons
 about_text: >
   Wij zijn meer dan alleen een orkest! Bij het H.I.J. staat gezelligheid voorop.
