Update Event “agenda”

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -4,7 +4,8 @@ event1_month: SEP
 event1_title: Optreden in de Franse Kerk
 event1_time: 10:00 - 10:45
 event1_location: Franse Kerkstraat 24, Voorburg
-event1_description: Onderdeel van het Huygens Festival. Gratis toegang, wel graag even aanmelden!
+event1_description: Onderdeel van het inspirerende Huygens Festival. Gratis
+  toegang, wel graag even aanmelden!
 event1_link: mailto:info@hijjeugdorkest.nl
 event2_year: "2025"
 event2_day: "04"
