--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,7 +1,7 @@
 event1_year: "2025"
 event1_day: "20"
 event1_month: SEP
-event1_title: Optreden in de Franse Kerk
+event1_title: Optreden in de Franse Kerk in Voorburg
 event1_time: 10:00 - 10:45
 event1_location: Franse Kerkstraat 24, Voorburg
 event1_description: Onderdeel van het inspirerende Huygens Festival. Gratis
