Update Event “agenda”

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -18,7 +18,7 @@ event2_link: mailto:info@hijjeugdorkest.nl
 event3_year: "2025"
 event3_day: "11"
 event3_month: OKT
-event3_title: Muzikaal Verhaal 'Tijger in de Trein'
+event3_title: Muzikaal Verhaal 'Tijger in de Trein' in Rijswijk
 event3_time: 11:00
 event3_location: Bibliotheek Rijswijk
 event3_description: Gratis toegang, reservering vereist
