Update FAQ Item “faq”

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -12,7 +12,7 @@ faq4_question: Wat voor muziek spelen jullie?
 faq4_answer: Van klassieke stukken tot film muziek en wereld muziek. Onze
   dirigent componeert ook speciaal voor ons!
 faq5_question: Kan ik eerst proberen?
-faq5_answer: Jazeker! Je krijgt twee gratis proeflessen om te ervaren hoe
+faq5_answer: Jazeker! Je krijgt twee gratis proefrepetities om te ervaren hoe
   gezellig het bij ons is.
 faq6_question: Wat doen jullie in de pauze?
 faq6_answer: Soms gaan we de markt op voor wat lekkers. En we spelen spelletjes
