Update Foto “gallery”

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,5 +1,5 @@
 photo1_image: /imgs/franse-kerk-concert.jpg
-photo1_caption: Optreden in de sfeervolle Franse Kerk
+photo1_caption: Optreden in de Franse Kerk in Voorburg
 photo1_location: Franse Kerk, Voorburg
 photo2_image: imgs/library-concert.jpg
 photo2_caption: Muzikaal verhaal in de bibliotheek
